--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -32,6 +32,8 @@ android {
 
 dependencies {
 
+    implementation project(path: ':data')
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
