--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ android {
 
 dependencies {
 
+    implementation project(path: ':domain')
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
