--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
     //Room
     def room_version = "2.5.2"
     implementation "androidx.room:room-runtime:$room_version"
+
+    //Image picker
+    def image_picker_version = "2.1"
+    implementation "com.github.dhaval2404:imagepicker:$image_picker_version"
 }
